--- a/Styles/chatbot.css
+++ b/Styles/chatbot.css
@@ -1,24 +1,37 @@
 body {
   margin: 0;
-  height: 100vh;
   display: flex;
   justify-content: center; /* center horizontally */
   font-family: system-ui, sans-serif;
+  overflow: hidden;
+}
+
+.js-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 99vh;
+
+  max-width: 600px;
+  width: 100%;
+  margin: 0px 10px;
 }
 
 .chat-input-container {
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 10px;
-  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .chat-input {
+  flex-grow: 1;
   border-radius: 10px;
-  width: 450px;
   height: 36px;
   border-width: 1px;
   padding-left: 10px;
+  position: static;
 }
 
 .chat-send-button {
@@ -27,37 +40,50 @@ body {
   border-width: 0;
   border-radius: 10px;
   width: 67px;
+  cursor: pointer;
 }
 
-.chatLog {
+.chat-log {
   display: flex;
+  flex-grow: 1;
   flex-direction: column; /* stack messages top → bottom */
   width: 100%;
-  max-width: 700px;
-  height: 100vh; /* full height of screen */
   box-sizing: border-box;
   overflow-y: auto; /* scrolls if content exceeds height */
 }
 
-.userResponse {
+.user-response {
   display: flex;
-  color: #111;
-  line-height: 1.5;
-  width: fit-content;
-  max-width: 80%;
+  justify-content: flex-end;
   align-self: flex-end; /* aligns the div itself inside a parent flex container */
-  align-items: flex-end; /* aligns the content inside this flex container to the bottom */
-  padding-right: 8px; /* optional, adds spacing inside the div */
+  align-items: start; /* aligns the content inside this flex container to the bottom */
   padding-bottom: 10px;
-  
-
+  max-width: 70%;
 }
 
-.userIcon {
+.robot-response {
+  padding-bottom: 10px;
+  display: flex;
+  gap: 5px;
+  max-width: 70%;
+}
+
+.user-icon {
   height: 40px;
-  margin-left: 10px;
   border-color: rgba(134, 151, 151, 0.651);
   border-style: solid;
   border-radius: 50px;
   border-width: 1px;
+  margin: 0px 5px;
+}
+
+.chat-text {
+  background-color: rgba(236, 236, 236, 0.993);
+  border-radius: 10px;
+  padding: 10px 20px;
+  font-size: 14px;
+  max-width: 80%;
+  overflow-wrap: break-word;
+  word-break: break-word;
+  white-space: inherit;
 }
