--- a/Styles/chatbot.css
+++ b/Styles/chatbot.css
@@ -71,6 +71,10 @@ body {
   max-width: 70%;
 }
 
+.loading-spinner {
+  width: 30px;
+}
+
 .user-icon {
   height: 40px;
   border-color: rgba(134, 151, 151, 0.651);
